<resources>
    <string name="app_name">DigiBank</string>
    <string name="about_us_text_value">DigiBank is a educational platform - simulated Online banking platform. Net banking or internet banking is becoming more and more popular with masses. Banking is becoming more digital and hence the reduction in bank branches - it is saving time and efforts of consumers. It is quintessential to start using net banking.</string>
    <string name="about_us_text_small_value">"This simulated environment allows user to learn how to use netbanking instead of experimenting on real platform with real money - here user will get dummy account with virtual cash to make the concept and procedure more familiar with more quality information about net banking. There will be step by step assistance and warning against negative effect.  "</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="about_digibank">About \n<B>DigiBank</B></string>
    <string name="our_courses">Our Courses</string>
    <string name="netbanking_overview">Netbanking Overview</string>
    <string name="about">About</string>
    <string name="digibank">DigiBank</string>
    <string name="email_error_msg">Enter valid email.</string>
    <string name="password_error_msg">Enter password</string>
    <string name="netbanking_overview_cource">EVERYTHING THAT YOU NEED TO KNOW ABOUT NETBANKING IN THE EASIEST WAY Lets Go through basics about netbanking/ internet banking before you get started… (Please note these are the basic instruction while using netbanking on real platform) Step 1 : Make sure that your computer is connected to internet. Step 2: Go to Your banks website Step 3: Login to bank Account - every bank has slightly different convention but something similar to netbanking Login or Internet Bank Login etc. Login Generally bank gives welcome KIT on account opening which has user ID/Customer ID to login. Few banks gives password along with Welcome Kit on first login need to change - Few banks sends OTP to registered mobile number to create password. Generic steps to Login Enter your customer Number - which you get with New Account opening KIT. Confirm your registered mobile Number ( Domestic Mobile Number ) Input OTP ( One Time Password) which you have received on your mobile Select and Input Debit card details. Set your IPIN ( Every bank has slight different method to register but above steps are there in general or in combinations) Safety precautions Never share PIN , Card Number , OTP, Password with anybody - bank never ask for such details via phone, email or in person. Change browser settings to off auto complete and remember login details. Change password after first time login Keep changing password periodically Password should be complex - difficult to guess Do not use same password for other portal logins. Internet Banking / Netbanking Features Internet banking offers over 250+ services and facilities that give you real-time access to your account. You can make payments to your account, open fixed and recurring deposits, view account details, request cheque book and a lot more, while you are online. Generic feature list Balance Enquiry Download account Statement Online bill Payment Manage Payee Transfer Fund Request Cheque book, stop payment of cheque etc Open Deposit With this overview, lets start using simulated online bank or play online banking game to understand Internet banking high level features and how to use it with assistance and warnings..</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name*</string>
    <string name="font_poppins" translatable="false">Poppins</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_net_banking_login">NetBankingLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_netbaking_overview">NetbakingOverviewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="last_name">Last Name*</string>
    <string name="select_gender">Select Gender</string>
    <string name="email">Email*</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="address">Address</string>
    <string name="occupation">Occupation</string>
    <string name="username">Username*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="submit">Submit</string>
    <string name="policy_text">By signing up, you agreed out Terms of services and Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="enter_6_characters_alphanumberic">Enter 6 Characters alphanumberic</string>
    <string name="password_text">Password</string>
</resources>