<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group"
    android:paddingTop="30dp"
    tools:context=".ui.netbankinglogin.NetBankingLoginActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/ic_back"
        android:text="@string/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_button"
        android:layout_marginTop="53dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            style="@style/TitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginStart="30dp"
            android:text="Login to"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Internet Banking"
            android:textSize="30sp"
            android:textStyle="normal" />


        <androidx.cardview.widget.CardView
            android:id="@+id/email_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="16dp"
            android:elevation="10dp"
            card_view:cardCornerRadius="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transpanrant_square_text_drawable">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="0dp"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/netbanking_id"
                        style="@style/EditTextBase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_6_characters_alphanumberic"
                        android:inputType="textCapCharacters"
                        android:maxLength="6"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/customer_id_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="Enter Customer Id Like : ASE123"
            android:textColor="@color/appBlueColor"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:id="@+id/pass_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="16dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_card"
            card_view:cardCornerRadius="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transpanrant_square_text_drawable">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="0dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/appBlueColor">

                    <EditText
                        android:id="@+id/password_edittext"
                        style="@style/EditTextBase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_text"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/internet_bank_pass_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="Enter Password Like : 12345"
            android:textColor="@color/appBlueColor"
            android:visibility="gone" />

        <Button
            android:id="@+id/net_banking_login"
            style="@style/AppButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="Login" />

        <TextView
            style="@style/TitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:text="Important Notes:"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:checked="true"
            android:clickable="false"
            android:text="Use dummy credentials for Internet Login."
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:checked="true"
            android:clickable="false"
            android:gravity="start"
            android:text="Never share PIN , Card Number , OTP, Password with anybody - bank never ask for such details via phone, email or in person."
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:checked="true"
            android:clickable="false"
            android:text="Keep changing password periodically."
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:checked="true"
            android:clickable="false"
            android:gravity="start"
            android:text="Password should be complex - difficult to guess."
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:checked="true"
            android:clickable="false"
            android:gravity="start"
            android:text=" Do not use same password for other portal logins Change browser settings to of auto complete" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>